--- a/Tulare_well_stats.Rmd
+++ b/Tulare_well_stats.Rmd
@@ -5,10 +5,13 @@ date: "August 22, 2017"
 output: 
   html_document:
     toc: TRUE
-    toc_float: TRUE
     smooth_scroll: FALSE
+    fig_width: 9
+    fig_height: 6
 bibliography: Tulare_TDS_ref.bib
 ---
+
+***
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -25,15 +28,20 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ##### All data cleaning, analysis, and mapping was carried out within R version 1.0.143.  
 
-##### All scripts, versions, data input files, and documentation for this model can be found in [this Github repository.](https://github.com/RichPau/Contaminant-Mapping)
+##### All scripts, versions, data input files, and documentation for this model can be found in [this Github repository.](https://github.com/RichPau/Regional_GW_Quality_Stats)
 
-# Summary of Results
+***
+
+# Summary
 * Groundwater quality data in the Tulare Basin is well-distributed spatially, with more data spatially concentrated near the urban centers of Fresno and Bakersfield. 
 * Temporally, groundwater quality data ranges from 1902 - 2014. Later years (1980 - 2014) are much more data rich than early years (1902 - 1940). 
 * Discontinuous data is more common than continuous data.
 * Both continuous and discountinuous data from shallow and deep wells show increases in measured TDS, which suggests depreciation of regional groundwater quality in the Tulare Basin.
 
-# Define Useful Functions
+***
+
+# Code
+### Define Useful Functions
 ```{r}
 # multiplot function from Winston Chang's "R Cookbook"
 multiplot <- function(..., plotlist=NULL, file, cols=1, layout=NULL) {
@@ -74,20 +82,21 @@ multiplot <- function(..., plotlist=NULL, file, cols=1, layout=NULL) {
 
 ```
 
-# Load Data and Required Packages
+### Load Data and Required Packages
 ```{r set wd, load required packages, and load data, warning = FALSE, messages = FALSE, results="hide", errors = FALSE}
 #setwd("E:/rpauloo/Documents/GitHub/Contaminant-Mapping")
-setwd("/Users/richpauloo/Documents/GitHub/Contaminant Mapping/Contaminant-Mapping")
+setwd("/Users/richpauloo/Documents/GitHub/Regional_GW_Quality_Stats")
 
 required.packages <- c("sp", "XML", "rgdal", "rgeos", "raster", "ggplot2", 
-                       "dismo", "leaflet", "RColorBrewer", "classInt", "dplyr")
+                       "dismo", "leaflet", "RColorBrewer", "classInt", "dplyr", 
+                       "EnvStats", "maps", "mapdata")
 suppressMessages(lapply(required.packages, require, character.only = TRUE))
 
 dat = read.csv(file = "TDS_Features_Tulare_Clip_TableToExcel.csv", stringsAsFactors = FALSE) # 54,171 total observations
 ```
 
-# Data Wrangling
-```{r Data Wrangling, warning = FALSE, messages = FALSE, results = "hide"}
+### Data Wrangling
+```{r Data Wrangling, warning = FALSE, message = FALSE, results = "hide"}
 # add dates to dat
 dat <- dat %>% 
   mutate(Date = as.Date(Samp_Date))
@@ -134,8 +143,8 @@ dat_with_depth %>%
   theme_light()
 ```
 
-# Visualize USGS data - Develop Map Function for Time Period
-```{r visualize USGS data}
+### Visualize USGS data - Develop Map Function for Time Period
+```{r visualize USGS data, warning = FALSE, message = FALSE, results = "hide"}
 # Is there sampling bias in the wells that have depth information to them? Let's look at the spatial distribution of these USGS wells which we have depth information for.
 
 # define coordinates
@@ -215,8 +224,8 @@ for(i in t){
 # spatial coverage of data depends on depth_class and time_frame. Deep and intermediate wells show high density around the urban centers of Fresno and Bakersfield. Shallow well data from 1980-1989, especially in the Eastern SJ Valley is very dense, likely the result of the emergence of non-point source contamination in the region and an effort to assess the magnitude and distribution of these patterns in groundwater quality. This widespread monitoring effort does not continue as time goes on.
 ```
 
-# Determine if wells in other databases match USGS wells
-```{r}
+### Locate Possible Duplicate Wells between USGS and other Databases
+```{r, warning = FALSE, message = FALSE, results = "hide"}
 dat_USGS <- dat_with_depth
 dat_other <- dat %>% 
   filter(Database != "USGS")
@@ -226,8 +235,8 @@ merge(dat_USGS, dat_other, by = c("Latitude", "Longitude"))
 # no well lat/lng coordiantes within the USGS database match well coordinates within the other databases. This indicates that USGS has never taken over wells from another database, or passed on responsibility for monitoring its own wells. This means we cannot infer the depth of wells from other databases based on the Depth_ft information we have in the USGS database.
 ```
 
-# Is there a relationship between depth and TDS?
-```{r}
+### Depth and TDS initial condition (1960)
+```{r, warning = FALSE, message = FALSE, results = "hide"}
 # for the earliest decade:
 boundary_condition <- dat_with_depth %>% 
   filter(Year <= 1960, Result <= 2000) %>% # start near the beginning of 1960 to set broundary conditions of model, filter out excessively contaminated wells to see the actaul pattern in groundwater TDS
@@ -240,6 +249,10 @@ boundary_condition <- dat_with_depth %>%
   coord_flip() +
   theme_light()
 
+# view plot
+boundary_condition
+
+# extract regression model
 boundary_dat <- ggplot_build(boundary_condition)$data[[2]]
 
 ggplot(boundary_dat) +
@@ -248,25 +261,8 @@ ggplot(boundary_dat) +
 # we will use this data to set the boundary conditions for the mixing cell model
 ```
 
-# How much has average GW quality in wells changed over time?
-```{r}
-dat_with_depth %>% 
-  group_by(time_period, depth_class) %>% 
-  dplyr::summarize(Result_mean = mean(Result),
-    count = n()) %>% 
-  ggplot() + 
-  geom_line(aes(x = factor(time_period), y = Result_mean, group = depth_class, color = depth_class)) + 
-  xlab('Time Period') +
-  ylab('TDS (mg/L)') + 
-  ggtitle('Mean Groundwater Quality in the Tulare Basin') + 
-  labs(color = 'Depth Class') +
-  theme_light()
-
-# An examination of the maps hallow groundwater quality does not actually improve between 1980. Sampling bias contributes towards a lack of data from 2000-2014. Let's now examine GW quality trends in individual wells.
-```
-
-# Prepare Basemaps Maps for Next Sections
-```{r}
+### Prepare Basemaps Maps for Next Sections
+```{r, warning = FALSE, message = FALSE, results = "hide"}
 library(maps)
 library(mapdata)
 
@@ -302,8 +298,8 @@ tulare_base <- ggplot(data = tulare, mapping = aes(x = long, y = lat, group = gr
 multiplot(ca_base, tulare_base, cols = 2)
 ```
 
-# Examine Whole of Shallow and Deep Well Data before Analyzing Continuous and Discontinuous
-```{r}
+### Examine All Shallow and Deep Well Data
+```{r, warning = FALSE, message = FALSE, results = "hide"}
 # all shallow well observations
 all_shallow <- dat %>% 
   filter(DepthClass == "Shallow") %>% 
@@ -323,7 +319,7 @@ map_unique_shallow <- tulare_base +
            x = min(unique_shallow$Longitude), y = min(unique_shallow$Latitude), 
            label = paste("n = ", length(unique_shallow$Well_ID))
            ) +
-  theme(plot.margin = unit(c(.5,.5,.5,.5), "cm"))
+  theme(plot.margin = unit(c(0,.5,0,0), "cm"))
 
 # stacked bar plot of unique shallow wells with fill = has_depth_data
 p_unique_shallow <- unique_shallow %>% 
@@ -331,11 +327,11 @@ p_unique_shallow <- unique_shallow %>%
   geom_bar(color = "black", aes(fill = has_depth_data)) +
   xlab('Year') +
   ylab('Observations') +
-  labs(caption = "(a)") +
+  labs(caption = "(b)") +
   xlim(1940, 2020) +
   theme_light(base_size = 12) +
-  theme(legend.position = c(.25,.85)) +
-  theme(plot.margin = unit(c(.5,.5,.5,.5), "cm"))
+  theme(legend.position = c(.25,.55)) +
+  theme(plot.margin = unit(c(0,0,.5,.5), "cm"))
 
 # unique shallow with depth observations
 unique_shallow_with_depth <- unique_shallow %>% 
@@ -353,14 +349,14 @@ shallow_sd <- round(lognorm_shallow$parameters[1] * lognorm_shallow$parameters[2
 p_unique_shallow_with_depth <- ggplot(unique_shallow_with_depth, aes(x = Depth_ft)) +
   geom_histogram(bins = 50, color = "black", fill = '#00BFC4') + 
   annotate("text", 
-           y = 200, x = 400, 
+           y = 150, x = 400, 
            label = paste("n = ", length(unique_shallow_with_depth$Well_ID), "\n",
                          "μ = ", shallow_mean, "\n",
                          "σ = ", shallow_sd)) +
   xlab('Well Depth (ft)') +
-  labs(caption = "(a)") +
+  labs(caption = "(c)") +
   theme_light(base_size = 12) +
-  theme(plot.margin = unit(c(.5,.5,.5,.5), "cm"))
+  theme(plot.margin = unit(c(.5,0,0,.5), "cm"))
 
 
 # Now let's repeat these analyses for deep wells:
@@ -379,12 +375,12 @@ map_unique_deep <- tulare_base +
   geom_point(data = cities, mapping = aes(x = longitude, y = latitude, group = factor(city))) +
   geom_text(data = cities, mapping = aes(x = longitude, y = latitude, group = factor(city), label = city), hjust = 0, vjust = -.5) + 
   theme(legend.position= c(0.25, 0.9)) +
-  labs(caption = "(b)") + 
+  labs(caption = "(a)") + 
   annotate("text", 
            x = min(unique_deep$Longitude), y = min(unique_deep$Latitude), 
            label = paste("n = ", length(unique_deep$Well_ID))
            ) +
-  theme(plot.margin = unit(c(.5,.5,.5,.5), "cm"))
+  theme(plot.margin = unit(c(0,.5,0,0), "cm"))
 
 # stacked bar plot of unique shallow wells with fill = has_depth_data
 p_unique_deep <- unique_deep %>% 
@@ -395,8 +391,8 @@ p_unique_deep <- unique_deep %>%
   labs(caption = "(b)") +
   xlim(1940, 2020) +
   theme_light(base_size = 12) +
-  theme(legend.position = c(.25,.85)) +
-  theme(plot.margin = unit(c(.5,.5,.5,.5), "cm"))
+  theme(legend.position = c(.25,.55)) +
+  theme(plot.margin = unit(c(0,0,.5,.5), "cm"))
 
 # unique shallow with depth observations
 unique_deep_with_depth <- unique_deep%>% 
@@ -414,113 +410,19 @@ deep_sd <- round(lognorm_deep$parameters[1] * lognorm_deep$parameters[2], 2)
 p_unique_deep_with_depth <- ggplot(unique_deep_with_depth, aes(x = Depth_ft)) +
   geom_histogram(bins = 50, color = "black", fill = '#00BFC4') + 
   xlab('Well Depth (ft)') +
-  labs(caption = "(b)") +
+  labs(caption = "(c)") +
   theme_light(base_size = 12) + 
   annotate("text", 
-           y = 47, x = 1100, 
+           y = 35, x = 1500, 
            label = paste("n = ", length(unique_deep_with_depth$Well_ID), "\n",
                          "μ = ", deep_mean, "\n",
                          "σ = ", deep_sd)) +
-  xlab('Well Depth (ft)') +
-  labs(caption = "(b)") +
-  theme_light(base_size = 12) +
-  theme(plot.margin = unit(c(.5,.5,.5,.5), "cm"))
-
-
-# multiplot of shallow and deep wells
-multiplot(map_unique_shallow, map_unique_deep, p_unique_shallow, p_unique_deep, p_unique_shallow_with_depth, p_unique_deep_with_depth, cols = 3)
+  theme(plot.margin = unit(c(.5,0,0,.5), "cm"))
 
 ```
 
-# How has GW quality in individual wells changed over time? (Deep)
-```{r}
-# strat working with complete data (dat) rather than data with explicit depth (dat_with_depth)
-
-# Deep wells with Continuous (n >= 25) data
-deep_continuous_early <- dat[ave(dat$Year, dat$Well_ID, FUN = length) >= 25, ] %>% 
-  filter(DepthClass == "Deep") %>% 
-  filter(Result < 2000 & Result > 5, Year < 1980) %>% 
-  group_by(Date, Well_ID, Latitude, Longitude) %>% 
-  dplyr::summarise(Result_mean = mean(Result))
-
-deep_continuous_late <- dat[ave(dat$Year, dat$Well_ID, FUN = length) >= 25, ] %>% 
-  filter(DepthClass == "Deep") %>% 
-  filter(Result < 2000 & Result > 5, Year >= 1980) %>% 
-  group_by(Date, Well_ID, Latitude, Longitude) %>% 
-  dplyr::summarise(Result_mean = mean(Result))
-
-p_deep_continuous <-
-  ggplot() + 
-  geom_line(data = deep_continuous_late, aes(x = Date, y = Result_mean, group = Well_ID), alpha = 1/5) + 
-  geom_point(data = deep_continuous_late, aes(x = Date, y = Result_mean, group = Well_ID), alpha = 1/3) + 
-  geom_smooth(data = deep_continuous_late, color = 'red', se = FALSE, aes(x = Date, y = Result_mean)) +
-  geom_line(data = deep_continuous_early, aes(x = Date, y = Result_mean, group = Well_ID), alpha = 1/5) + 
-  geom_point(data = deep_continuous_early, aes(x = Date, y = Result_mean, group = Well_ID), alpha = 1/3) + 
-  xlab('Time') +
-  ylab('TDS (mg/L)') + 
-  ylim(0, 2000) + 
-  xlim(as.Date("1940", "%Y"), as.Date("2020", "%Y")) +
-  annotate("text", 
-           y = 1750, x = as.Date("1950", "%Y"), 
-           label = paste("n = ", as.character(
-             length(unique(deep_continuous_early$Well_ID)) +
-             length(unique(deep_continuous_late$Well_ID))), sep = "")) +
-  labs(caption = "(a)") +
-  theme_light(base_size = 12) 
-
-# Deep wells with Discontinous (n >= 0) data
-deep_discontinuous_late <- dat %>% 
-  filter(DepthClass == "Deep") %>% 
-  filter(Result < 2000 & Result > 5 & Year >= 1970) %>% 
-  group_by(Date, Well_ID, Latitude, Longitude) %>% 
-  dplyr::summarise(Result_mean = mean(Result))
-
-deep_discontinuous_early <- dat %>% 
-  filter(DepthClass == "Deep") %>% 
-  filter(Result < 2000 & Result > 5 & Year < 1970 & Year > 1930) %>% 
-  group_by(Date, Well_ID, Latitude, Longitude) %>% 
-  dplyr::summarise(Result_mean = mean(Result))
-
-p_deep_discontinuous <-
-  ggplot() + 
-  geom_line(data = deep_discontinuous_late, aes(x = Date, y = Result_mean, group = Well_ID), alpha = 1/5) + 
-  geom_point(data = deep_discontinuous_late, aes(x = Date, y = Result_mean, group = Well_ID), alpha = 1/3) + 
-  geom_smooth(data = deep_discontinuous_late, color = 'red', se = FALSE, aes(x = Date, y = Result_mean)) +
-  geom_line(data = deep_discontinuous_early, aes(x = Date, y = Result_mean, group = Well_ID), alpha = 1/5) + 
-  geom_point(data = deep_discontinuous_early, aes(x = Date, y = Result_mean, group = Well_ID), alpha = 1/3) + 
-  xlab('Time') +
-  ylab('TDS (mg/L)') + 
-  ylim(0, 2000) + 
-  xlim(as.Date("1940", "%Y"), as.Date("2020", "%Y")) +
-  annotate("text", 
-           y = 1750, x = as.Date("1950", "%Y"), 
-           label = paste("n = ", as.character(
-             length(unique(deep_discontinuous_late$Well_ID)) +
-             length(unique(deep_discontinuous_early$Well_ID))), sep = "")) +
-  labs(caption = "(b)") +
-  theme_light(base_size = 12) 
-
-# map for continuous deep wells
-map_deep_continuous <- tulare_base +
-  geom_point(data = deep_continuous_early, aes(x = Longitude, y = Latitude, group = Well_ID), size = .5, color = 'red', alpha = 1/5) +
-  geom_point(data = deep_continuous_late, aes(x = Longitude, y = Latitude, group = Well_ID), size = .5, color = 'red', alpha = 1/5) +
-  geom_point(data = cities, mapping = aes(x = longitude, y = latitude, group = factor(city))) +
-  geom_text(data = cities, mapping = aes(x = longitude, y = latitude, group = factor(city), label = city), hjust = 0, vjust = -.5) +
-  labs(caption = "(a)")
-
-# map for discontinuous deep wells
-map_deep_discontinuous <- tulare_base +
-  geom_point(data = deep_discontinuous_early, aes(x = Longitude, y = Latitude, group = Well_ID), size = .5, color = 'red', alpha = 1/5) +
-  geom_point(data = deep_discontinuous_late, aes(x = Longitude, y = Latitude, group = Well_ID), size = .5, color = 'red', alpha = 1/5) +
-  geom_point(data = cities, mapping = aes(x = longitude, y = latitude, group = factor(city))) +
-  geom_text(data = cities, mapping = aes(x = longitude, y = latitude, group = factor(city), label = city), hjust = 0, vjust = -.5) +
-  labs(caption = "(b)")
-  
-multiplot(map_deep_continuous, map_deep_discontinuous, p_deep_continuous, p_deep_discontinuous, cols = 2)
-```
-
-# How has GW quality in individual wells changed over time? (Shallow)
-```{r}
+### GW Quality Changes in individual wells (Shallow)
+```{r, warning = FALSE, message = FALSE, results = "hide"}
 # Shallow wells with Continuous (n >= 25) data
 shallow_continuous_early <- dat[ave(dat$Year, dat$Well_ID, FUN = length) >= 25, ] %>% 
   filter(DepthClass == "Shallow" & Year < 2005 & Result < 20000) %>% 
@@ -543,13 +445,25 @@ p_shallow_continuous <-
   ylab('TDS (mg/L)') + 
   ylim(0, 20000) + 
   xlim(as.Date("1940", "%Y"), as.Date("2020", "%Y")) +
+  labs(caption = "(b)") +
+  theme_light(base_size = 12) +
+  theme(plot.margin = unit(c(0,0,0,.5), "cm"))
+
+# map for continuous shallow wells
+map_shallow_continuous <- tulare_base +
+  geom_point(data = shallow_continuous_early, aes(x = Longitude, y = Latitude, group = Well_ID), size = .5, color = 'red', alpha = 1/5) +
+  geom_point(data = shallow_continuous_late, aes(x = Longitude, y = Latitude, group = Well_ID), size = .5, color = 'red', alpha = 1/5) +
+  geom_point(data = cities, mapping = aes(x = longitude, y = latitude, group = factor(city))) +
+  geom_text(data = cities, mapping = aes(x = longitude, y = latitude, group = factor(city), label = city), hjust = 0, vjust = -.5) +
+  labs(caption = "(a)") + 
   annotate("text", 
-           y = 17500, x = as.Date("1950", "%Y"), 
+           x = min(unique_deep$Longitude), y = min(unique_deep$Latitude), 
            label = paste("n = ", as.character(
              length(unique(shallow_continuous_early$Well_ID)) + 
              length(unique(shallow_continuous_late$Well_ID))), sep = "")) +
-  labs(caption = "(a)") +
-  theme_light(base_size = 12) 
+  theme(plot.margin = unit(c(0,.5,0,0), "cm"))
+
+## Now let's look at discontinuous shallow well data
 
 # Shallow wells with Discontinous (n >= 0) data
 shallow_discontinuous_late <- dat %>% 
@@ -581,22 +495,9 @@ p_shallow_discontinuous <-
   ylab('TDS (mg/L)') + 
   ylim(0, 20000) + 
   xlim(as.Date("1940", "%Y"), as.Date("2020", "%Y")) +
-  annotate("text", 
-           y = 17500, x = as.Date("1950", "%Y"), 
-           label = paste("n = ", as.character(
-             length(unique(shallow_discontinuous_early$Well_ID)) +
-             length(unique(shallow_discontinuous_middle$Well_ID)) +
-             length(unique(shallow_discontinuous_late$Well_ID))), sep = "")) +
   labs(caption = "(b)") +
-  theme_light(base_size = 12)
-
-# map for continuous shallow wells
-map_shallow_continuous <- tulare_base +
-  geom_point(data = shallow_continuous_early, aes(x = Longitude, y = Latitude, group = Well_ID), size = .5, color = 'red', alpha = 1/5) +
-  geom_point(data = shallow_continuous_late, aes(x = Longitude, y = Latitude, group = Well_ID), size = .5, color = 'red', alpha = 1/5) +
-  geom_point(data = cities, mapping = aes(x = longitude, y = latitude, group = factor(city))) +
-  geom_text(data = cities, mapping = aes(x = longitude, y = latitude, group = factor(city), label = city), hjust = 0, vjust = -.5) +
-  labs(caption = "(a)")
+  theme_light(base_size = 12) +
+  theme(plot.margin = unit(c(0,0,0,.5), "cm"))
 
 # map for discontinuous shallow wells
 map_shallow_discontinuous <- tulare_base +
@@ -605,19 +506,177 @@ map_shallow_discontinuous <- tulare_base +
   geom_point(data = shallow_discontinuous_late, aes(x = Longitude, y = Latitude, group = Well_ID), size = .5, color = 'red', alpha = 1/5) +
   geom_point(data = cities, mapping = aes(x = longitude, y = latitude, group = factor(city))) +
   geom_text(data = cities, mapping = aes(x = longitude, y = latitude, group = factor(city), label = city), hjust = 0, vjust = -.5) +
-  labs(caption = "(b)")
-
-multiplot(map_shallow_continuous, map_shallow_discontinuous, p_shallow_continuous, p_shallow_discontinuous, cols = 2)
-
+  labs(caption = "(a)") +
+  annotate("text", 
+           x = min(unique_deep$Longitude), y = min(unique_deep$Latitude), 
+           label = paste("n = ", as.character(
+             length(unique(shallow_discontinuous_early$Well_ID)) +
+             length(unique(shallow_discontinuous_middle$Well_ID)) +
+             length(unique(shallow_discontinuous_late$Well_ID))), sep = "")) +
+  theme(plot.margin = unit(c(0,.5,0,0), "cm"))
 ```
 
 
-# Appendix: 
-## Depth Class
+### GW Quality Changes in individual wells (Deep)
+```{r, warning = FALSE, message = FALSE, results = "hide"}
+# strat working with complete data (dat) rather than data with explicit depth (dat_with_depth)
+
+# Deep wells with Continuous (n >= 25) data
+deep_continuous_early <- dat[ave(dat$Year, dat$Well_ID, FUN = length) >= 25, ] %>% 
+  filter(DepthClass == "Deep") %>% 
+  filter(Result < 2000 & Result > 5, Year < 1980) %>% 
+  group_by(Date, Well_ID, Latitude, Longitude) %>% 
+  dplyr::summarise(Result_mean = mean(Result))
+
+deep_continuous_late <- dat[ave(dat$Year, dat$Well_ID, FUN = length) >= 25, ] %>% 
+  filter(DepthClass == "Deep") %>% 
+  filter(Result < 2000 & Result > 5, Year >= 1980) %>% 
+  group_by(Date, Well_ID, Latitude, Longitude) %>% 
+  dplyr::summarise(Result_mean = mean(Result))
+
+p_deep_continuous <-
+  ggplot() + 
+  geom_line(data = deep_continuous_late, aes(x = Date, y = Result_mean, group = Well_ID), alpha = 1/5) + 
+  geom_point(data = deep_continuous_late, aes(x = Date, y = Result_mean, group = Well_ID), alpha = 1/3) + 
+  geom_smooth(data = deep_continuous_late, color = 'red', se = FALSE, aes(x = Date, y = Result_mean)) +
+  geom_line(data = deep_continuous_early, aes(x = Date, y = Result_mean, group = Well_ID), alpha = 1/5) + 
+  geom_point(data = deep_continuous_early, aes(x = Date, y = Result_mean, group = Well_ID), alpha = 1/3) + 
+  xlab('Time') +
+  ylab('TDS (mg/L)') + 
+  ylim(0, 2000) + 
+  xlim(as.Date("1940", "%Y"), as.Date("2020", "%Y")) +
+  labs(caption = "(b)") +
+  theme_light(base_size = 12) +
+  theme(plot.margin = unit(c(0,0,0,.5), "cm"))
+
+# map for continuous deep wells
+map_deep_continuous <- tulare_base +
+  geom_point(data = deep_continuous_early, aes(x = Longitude, y = Latitude, group = Well_ID), size = .5, color = 'red', alpha = 1/5) +
+  geom_point(data = deep_continuous_late, aes(x = Longitude, y = Latitude, group = Well_ID), size = .5, color = 'red', alpha = 1/5) +
+  geom_point(data = cities, mapping = aes(x = longitude, y = latitude, group = factor(city))) +
+  geom_text(data = cities, mapping = aes(x = longitude, y = latitude, group = factor(city), label = city), hjust = 0, vjust = -.5) +
+  labs(caption = "(a)") +
+  annotate("text", 
+           x = min(unique_deep$Longitude), y = min(unique_deep$Latitude),
+           label = paste("n = ", as.character(
+             length(unique(deep_continuous_early$Well_ID)) +
+             length(unique(deep_continuous_late$Well_ID))), sep = "")) +
+  theme(plot.margin = unit(c(0,.5,0,0), "cm"))
+           
+           
+## Now let's look at deep discontinuous well data
+
+# Deep wells with Discontinous (n >= 0) data
+deep_discontinuous_late <- dat %>% 
+  filter(DepthClass == "Deep") %>% 
+  filter(Result < 2000 & Result > 5 & Year >= 1970) %>% 
+  group_by(Date, Well_ID, Latitude, Longitude) %>% 
+  dplyr::summarise(Result_mean = mean(Result))
+
+deep_discontinuous_early <- dat %>% 
+  filter(DepthClass == "Deep") %>% 
+  filter(Result < 2000 & Result > 5 & Year < 1970 & Year > 1930) %>% 
+  group_by(Date, Well_ID, Latitude, Longitude) %>% 
+  dplyr::summarise(Result_mean = mean(Result))
+
+p_deep_discontinuous <-
+  ggplot() + 
+  geom_line(data = deep_discontinuous_late, aes(x = Date, y = Result_mean, group = Well_ID), alpha = 1/5) + 
+  geom_point(data = deep_discontinuous_late, aes(x = Date, y = Result_mean, group = Well_ID), alpha = 1/3) + 
+  geom_smooth(data = deep_discontinuous_late, color = 'red', se = FALSE, aes(x = Date, y = Result_mean)) +
+  geom_line(data = deep_discontinuous_early, aes(x = Date, y = Result_mean, group = Well_ID), alpha = 1/5) + 
+  geom_point(data = deep_discontinuous_early, aes(x = Date, y = Result_mean, group = Well_ID), alpha = 1/3) + 
+  xlab('Time') +
+  ylab('TDS (mg/L)') + 
+  ylim(0, 2000) + 
+  xlim(as.Date("1940", "%Y"), as.Date("2020", "%Y")) +
+  labs(caption = "(b)") +
+  theme_light(base_size = 12) +
+  theme(plot.margin = unit(c(0,0,0,.5), "cm"))
+
+# map for discontinuous deep wells
+map_deep_discontinuous <- tulare_base +
+  geom_point(data = deep_discontinuous_early, aes(x = Longitude, y = Latitude, group = Well_ID), size = .5, color = 'red', alpha = 1/5) +
+  geom_point(data = deep_discontinuous_late, aes(x = Longitude, y = Latitude, group = Well_ID), size = .5, color = 'red', alpha = 1/5) +
+  geom_point(data = cities, mapping = aes(x = longitude, y = latitude, group = factor(city))) +
+  geom_text(data = cities, mapping = aes(x = longitude, y = latitude, group = factor(city), label = city), hjust = 0, vjust = -.5) +
+  labs(caption = "(a)") +
+  annotate("text", 
+           x = min(unique_deep$Longitude), y = min(unique_deep$Latitude),
+           label = paste("n = ", as.character(
+             length(unique(deep_discontinuous_late$Well_ID)) +
+             length(unique(deep_discontinuous_early$Well_ID))), sep = "")) +
+  theme(plot.margin = unit(c(0,.5,0,0), "cm"))
+```
+
+***
+
+# Results
+
+### Shallow Wells
+```{r, warning = FALSE, message = FALSE, results = "hide", echo = FALSE}
+layout <- matrix(c(1, 2, 1, 3), nrow = 2, byrow = TRUE)
+multiplot(map_unique_shallow, p_unique_shallow, p_unique_shallow_with_depth, layout = layout)
+```
+
+###### **(a)** All unique shallow well observations, including wells with continuous and discontinuous data. **(b)** All unique shallow wells with depth data are shown in blue, whereas shallow wells without explicit depth data are shown in red. **(c)** All unique shallow wells with depth data follow a lognormal distribution. Parameters were calculated using the Land Method [@Land1971]. 
+
+***
+
+#### Shallow Wells with Continuous Data
+```{r, warning = FALSE, message = FALSE, results = "hide", echo = FALSE}
+multiplot(map_shallow_continuous, p_shallow_continuous, cols = 2)
+```
+
+###### **(a)** Unique shallow well observations with contnuous (>= 25 observations) data are well-dispersed spatially. **(b)** A smoothed regression through the continuous data in the time from 2005-2014, shows an increasing trend in regional GW TDS.
+
+***
+
+#### Shallow Wells with Continuous and Discontinuous Data
+```{r, warning = FALSE, message = FALSE, results = "hide", echo = FALSE}
+multiplot(map_shallow_discontinuous, p_shallow_discontinuous, cols = 2)
+```
+
+###### **(a)** Unique shallow well observations with continuous (>= 25 observations) and discontnuous data are well-dispersed spatially. 18 outlying wells were removed. **(b)** A smoothed regression line in two time regions, 1984-1993 and 1993-2014, where data is clustered, shows increasing trends in regional GW quality in shallow wells.
+
+***
+
+### Deep Wells
+##### Note the scale of the y axis between the shallow and deep wells varies by an order of magnitude.
+```{r, warning = FALSE, message = FALSE, results = "hide", echo = FALSE}
+multiplot(map_unique_deep, p_unique_deep, p_unique_deep_with_depth, layout = layout)
+```
+
+###### **(a)** All unique deep well observations, including wells with continuous and discontinuous data. **(b)** All unique deep wells with depth data are shown in blue, whereas deep wells without explicit depth data are shown in red. **(c)** All unique deep wells with depth data follow a lognormal distribution. Parameters were calculated using the Land Method [@Land1971]. 
+
+***
+
+#### Deep Wells with Continuous Data
+```{r, warning = FALSE, message = FALSE, results = "hide", echo = FALSE}
+multiplot(map_deep_continuous, p_deep_continuous, cols = 2)
+```
+
+###### **(a)** Deep wells with continuous (>= 25 observations) data are well-dispersed spatially. **(b)** A smoothed regression line from 1980-2014, where data is clustered, shows an increasing trend in regional GW TDS in deep wells.
+
+***
+
+#### Deep Wells with Continuous and Discontinuous Data
+```{r, warning = FALSE, message = FALSE, results = "hide", echo = FALSE}
+multiplot(map_deep_discontinuous, p_deep_discontinuous, cols = 2)
+```
+
+###### **(a)** Unique deep well observations with continuous (>= 25 observations) and discontnuous data are well-dispersed spatially. 20 outlying wells were removed. **(b)** A smoothed regression line from 1970-2014, where data is clustered, shows an increasing trend in regional GW TDS in deep wells.
+
+***
+
+# Appendix
+### Depth Class
 ##### Exerpt from “Initial Conceptual Model (ICM) Technical Services Tasks 7 and 8 – Salt and Nitrate Analysis for the Central Valley Floor and a Focused Analysis of Modesto and Kings Subregions Final Report.” [@LarryWalkerAssociates2013]:
 >Wells were classified into three depth classes (Shallow, Deep, and Unknown) based on information provided by the original source, as shown in Table 3-2. Most wells in the database did not contain quantitative information on well depth or screened interval; however, other information such as well type was used when available to infer the depth from which a well was sampled. Only the USGS database contained quantitative information regarding well depth. For wells lacking a specified value of well depth, the well type was used to infer the depth (see Table 3-2 for examples). Wells in the DWR, GeotrackerGAMA, and RWQCB WDR Dairy Data databases sometimes contain a description of the well type which enabled categorization of the well into a depth class. All wells from the DPH database were assumed to be drinking water supply wells.
 Irrigation/agricultural, industrial, and municipal supply wells were classified as “Deep” whereas domestic wells and monitoring wells were classified as “Shallow”. All DPH wells were therefore classified as “Deep” as these were all assumed to be drinking water supply wells. All other well types were classified as “Unknown”.
 A large number of USGS wells provided numerical values for well depth; therefore, these were used when provided. USGS wells were assigned a depth class based on the 20-year travel depth for a particular CVHM cell that it was located within. Wells with a depth less than the 20-year travel depth were classified as “Shallow,” and those below the 20-year travel depth were classified as “Deep”. Wells without depth information or a well type were classified as “Unknown”. 
+
+***
 
 # References
 
